--- a/readme.html
+++ b/readme.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta name="viewport" content="width=device-width" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>WordPress &#8250; À lire</title>
-	<link rel="stylesheet" href="wp-admin/css/install.css?ver=20100228" type="text/css" />
-</head>
-<body>
-<h1 id="logo">
-	<a href="https://fr.wordpress.org/"><img alt="WordPress" src="wp-admin/images/wordpress-logo.png" /></a>
-</h1>
-<p style="text-align: center">Plateforme de publication sémantique personnelle</p>
-
-<h2>Préambule</h2>
-<p>Bienvenue. WordPress est un projet très spécial pour moi. Chaque contributrice et contributeur ajoute quelque chose d’unique à ce projet, et ensemble nous créons quelque chose de beau, et dont je suis fier de faire partie. Nous avons passé des milliers d’heures sur le développement de WordPress, et nous nous attachons tous les jours à vous faciliter la vie. Merci à vous d’en faire une partie de votre monde.</p>
-<p style="text-align: right">&#8212; Matt Mullenweg</p>
-
-<h2>Installation : la fameuse installation en 5 minutes</h2>
-<ol>
-	<li>Décompressez l’archive dans un dossier vide de votre ordinateur, puis mettez tous ces fichiers en ligne ;</li>
-	<li>Ouvrez le fichier <code>wp-config-sample.php</code> avec votre éditeur de texte préféré, comme WordPad ou similaire, et complétez les informations liées à votre base de données ;</li>
-	<li>Sauvegardez le fichier sous le nom <code>wp-config.php</code> ;</li>
-	<li>Envoyez le tout sur votre hébergement via un logiciel client FTP ;</li>
-	<li>Ouvrez le fichier <span class="file"><a href="wp-admin/install.php">/wp-admin/install.php</a></span> dans votre navigateur. Celui-ci vous guidera dans la création du fichier <code>wp-config.php</code>, qui contient les détails de connexion à votre base de données ;
-		<ol>
-			<li>Si cela ne fonctionne pas, ne vous inquiétez pas : certains hébergeurs n’autorisent pas la création de fichier. Ouvrez le fichier <code>wp-config.php</code> avec un éditeur de texte, et saisissez-y directement les détails de connexion à votre base de données ;</li>
-			<li>Enregistrez le fichier sous le nom <code>wp-config.php</code> et mettez-le en ligne ;</li>
-			<li>Ouvrez le fichier  <span class="file"><a href="wp-admin/install.php">wp-admin/install.php</a></span> dans votre navigateur ;</li>
-		</ol>
-	</li>
-	<li>Une fois le fichier de configuration correctement rempli, l’installateur met en place les tables nécessaires à votre blog. Si vous obtenez une erreur, vérifiez le contenu du fichier <span class="file"><code>wp-config.php</code></span>, et réessayez. Si cela échoue encore une fois, rendez-vous sur les <a href="http://wpfr.net/support/">forums d’entraide</a> et soyez le plus précis possible dans vos explications. Si tout se passe bien, passez à l’étape suivante ;</li>
-	<li><strong>Si vous n’avez pas précisé de mot de passe, notez bien celui qui vous est donné.</strong> Si vous n’avez pas précisé d’identifiant, ce sera <code>admin</code> ;</li>
-site MotaPhoto de Nathalie MOTA, photographe profesionnel.
+Site WordPress complexe d'une photographe professionnelle, avec un theme 100% pesonnalisé.
